# midi-sequence-generator

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SequenceGenerator.cpp  SequenceGenerator.h  main_cli.cpp
scripts/: fix_moduleinfo_json.py
